--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <option value="cancer">Cancer</option>
     <option value="leo">Leo</option>
     <option value="virgo">Virgo</option>
-    <option value="liebra">Libra</option>
+    <option value="libra">Libra</option>
     <option value="scorpio">Scorpio</option>
     <option value="sagittarius">Sagittarius</option>
     <option value="capricorn">Capricorn</option>
